Fix logout button position

--- a/packages/client/src/styles/main.scss
+++ b/packages/client/src/styles/main.scss
@@ -24,6 +24,10 @@ $background-image: '../images/bg.jpg';
   margin: 0;
 }
 
+.navbar-right {
+  margin-right: 70px;
+}
+
 .file-list {
   height: 200px;
   overflow: auto;
